--- a/Wu-Shang-Clan/Employee-Audit/templates/emp/add_employee.html
+++ b/Wu-Shang-Clan/Employee-Audit/templates/emp/add_employee.html
@@ -15,7 +15,7 @@
           <div class="col-md-6 offset-md-3">
             <div class="card bg-dark text-white">
               <div class="card-body">
-                <form action="/emp/add-emp/" method="POST">
+                <form action="/emp/add_employee/" method="POST">
                   {% csrf_token %}
                   <div class="mb-3">
                     <label for="name">Employee Name</label>
@@ -59,15 +59,17 @@
                     ></textarea>
                   </div>
                   <div class="mb-3 form-check">
+                    <input type="hidden" name="emp_working" value="false">
                     <label for="working">Working Status</label>
                     <input id="working" name="emp_working" type="checkbox" class="form-check-input">
                   </div>
+
                   <div class="mb-3 ">
                     <label for="department">Departments</label>
                     <select name="emp_department" id="department" class="form-control">
-                        <option value="CSE">Computer Science</option>
-                        <option value="ME">Mechanical Engg</option>
-                        <option value="EE">Electrical Engg</option>
+                        <option value= "0">Computer Science</option>
+                        <option value= "1">Mechanical Engg</option>
+                        <option value= "2">Electrical Engg</option>
                     </select>
                   </div>
                   <div class="container text-center">
