--- a/Wu-Shang-Clan/Employee-Audit/templates/emp/navbar.html
+++ b/Wu-Shang-Clan/Employee-Audit/templates/emp/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #00ABB3;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/emp/home/">Employee Management System</a>
+      <a class="navbar-brand" href="/emp/home/">Employee Data Management and Auditing</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -10,7 +10,7 @@
             <a class="nav-link active" aria-current="page" href="/emp/home/">Home</a>
           </li> {% endcomment %}
           <li class="nav-item">
-            <a class="nav-link" href="/emp/add-emp/">Add Employee</a>
+            <a class="nav-link" href="/emp/add_employee/">Add Employee</a>
           </li>
           <li><a class="nav-link" href="/emp/home/">View Table</a></li>
         </ul>
