--- a/Wu-Shang-Clan/Employee-Audit/templates/emp/department_list.html
+++ b/Wu-Shang-Clan/Employee-Audit/templates/emp/department_list.html
@@ -1,36 +1,56 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-    <title>Department List</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Department Data Management</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>Department List</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Department ID</th>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for department in departments %}
-            <tr>
-                <td>{{ department.dept_id }}</td>
-                <td>{{ department.name }}</td>
-                <td>{{ department.description }}</td>
-                <td>
-                    <a href="{% url 'update_department' department.id %}">Update</a> |
-                    <a href="{% url 'delete_department' department.id %}">Delete</a>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <a href="{% url 'add_department' %}">Add Department</a>
+    {% include 'emp/navbar.html' %}
+    <h1 class="text-center my-3">Departments Table</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-body">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>S.NO.</th>
+                                    <th>NAME</th>
+                                    <th>DESCRIPTION</th>
+                                    <th>ACTION</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for department in departments %}
+                                <tr>
+                                    <td>{{ forloop.counter }}</td>
+                                    <td>{{ department.name }}</td>
+                                    <td>{{ department.description }}</td>
+                                    <td>
+                                        <a href="/emp/delete-emp/{{ employee.id }}"
+                                            class="btn btn-danger btn-sm">Delete</a>
+                                        <a href="/emp/update-emp/{{ employee.id }}"
+                                            class="btn btn-dark btn-sm">Update</a>
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
