--- a/Wu-Shang-Clan/Employee-Audit/templates/emp/add_employee_office_assignment.html
+++ b/Wu-Shang-Clan/Employee-Audit/templates/emp/add_employee_office_assignment.html
@@ -4,37 +4,43 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Add Department</title>
+    <title>Add Employee Office Assignment</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
 <body>
     {% include 'emp/navbar.html' %}
-    <h1 class="text-center my-3">Add Department</h1>
+    <h1 class="text-center my-3">Add Employee Office Assignment</h1>
 
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <div class="card bg-dark text-white">
-                    <div class="card-body">
+                    <div class "card-body">
                         <form action="http://127.0.0.1:8000/emp/home/" method="POST">
                             {% csrf_token %}
                             <div class="mb-3">
-                                <label for="department_name">Department Name</label>
-                                <input type="text" id="department_name" class="form-control"
-                                    placeholder="Enter Department Name" name="department_name" required />
+                                <label for="employee_id">Employee</label>
+                                <select name="employee_id" id="employee_id" class="form-control" required>
+                                    {% for employee in employees %}
+                                    <option value="{{ employee.id }}">{{ employee.name }}</option>
+                                    {% endfor %}
+                                </select>
                             </div>
 
                             <div class="mb-3">
-                                <label for="department_description">Description</label>
-                                <textarea name="department_description" id="department_description" rows="5"
-                                    class="form-control" required></textarea>
+                                <label for="office_id">Office</label>
+                                <select name="office_id" id="office_id" class="form-control" required>
+                                    {% for office in offices %}
+                                    <option value="{{ office.id }}">{{ office.name }}</option>
+                                    {% endfor %}
+                                </select>
                             </div>
 
                             <div class="container text-center">
                                 <button class="btn" style="background-color: #00ABB3;">
-                                    Add Department
+                                    Add Employee Office Assignment
                                 </button>
                             </div>
                         </form>
@@ -48,5 +54,4 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
