--- a/Wu-Shang-Clan/Employee-Audit/templates/emp/add_task.html
+++ b/Wu-Shang-Clan/Employee-Audit/templates/emp/add_task.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Add Department</title>
+    <title>Add Task</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
 <body>
     {% include 'emp/navbar.html' %}
-    <h1 class="text-center my-3">Add Department</h1>
+    <h1 class="text-center my-3">Add Task</h1>
 
     <div class="container">
         <div class="row">
@@ -21,20 +21,34 @@
                         <form action="http://127.0.0.1:8000/emp/home/" method="POST">
                             {% csrf_token %}
                             <div class="mb-3">
-                                <label for="department_name">Department Name</label>
-                                <input type="text" id="department_name" class="form-control"
-                                    placeholder="Enter Department Name" name="department_name" required />
+                                <label for="title">Task Title</label>
+                                <input id="title" type="text" class="form-control" placeholder="Enter Task Title"
+                                    name="title" required />
                             </div>
 
                             <div class="mb-3">
-                                <label for="department_description">Description</label>
-                                <textarea name="department_description" id="department_description" rows="5"
-                                    class="form-control" required></textarea>
+                                <label for="description">Description</label>
+                                <textarea name="description" id="description" rows="5" class="form-control"
+                                    required></textarea>
+                            </div>
+
+                            {% comment %} <div class="mb-3">
+                                <label for="assigned_to">Assigned To</label>
+                                <select name="assigned_to" id="assigned_to" class="form-control" required>
+                                    {% for employee in employees %}
+                                    <option value="{{ employee.id }}">{{ employee.emp_name }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div> {% endcomment %}
+
+                            <div class="mb-3">
+                                <label for="due_date">Due Date</label>
+                                <input id="due_date" type="date" class="form-control" name="due_date" required />
                             </div>
 
                             <div class="container text-center">
                                 <button class="btn" style="background-color: #00ABB3;">
-                                    Add Department
+                                    Add Task
                                 </button>
                             </div>
                         </form>
