--- a/Wu-Shang-Clan/Employee-Audit/templates/home.html
+++ b/Wu-Shang-Clan/Employee-Audit/templates/home.html
@@ -1,34 +1,66 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-        <title>Home Page</title>
+<!doctype html>
+<html lang="en">
 
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <div class="container" style="text-align: center">
-            {% include 'navbar.html' %}
-            <h1>WELCOME To Our Wesbite</h1>
-            <p>{% lorem 5 p random %}
-            </p>
-            <button>Contact Us</button>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Employee Data Management and Auditing</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+</head>
+
+<body>
+    {% include 'emp/navbar.html' %}
+    <h1 class="text-center my-3">Employees Table</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-body">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>S.NO.</th>
+                                    <th>NAME</th>
+                                    <th>ID</th>
+                                    <th>PHONE</th>
+                                    <th>WORKING STATUS</th>
+                                    <th>DEPARTMENT</th>
+                                    <th>ADDRESS</th>
+                                    <th>ACTION</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for employee in employees %}
+                                <tr>
+                                    <td>{{forloop.counter}}</td>
+                                    <td>{{employee.name}}</td>
+                                    <td>{{employee.emp_id}}</td>
+                                    <td>{{employee.phone}}</td>
+                                    <td>{{employee.working}}</td>
+                                    <td>{{employee.department}}</td>
+                                    <td>{{employee.address}}</td>
+                                    <td>
+                                        <a href="/emp/delete-emp/{{ employee.id }}"
+                                            class="btn btn-danger btn-sm">Delete</a>
+                                        <a href="/emp/update-emp/{{employee.id}}" class="btn btn-dark btn-sm">Update</a>
+                                    </td>
+                                </tr>
+                                {%endfor%}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
         </div>
-        
+    </div>
 
 
-        
-        <script src="" async defer></script>
-    </body>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
