--- a/Wu-Shang-Clan/Employee-Audit/templates/emp/add_department.html
+++ b/Wu-Shang-Clan/Employee-Audit/templates/emp/add_department.html
@@ -18,7 +18,7 @@
             <div class="col-md-6 offset-md-3">
                 <div class="card bg-dark text-white">
                     <div class="card-body">
-                        <form action="http://127.0.0.1:8000/emp/home/" method="POST">
+                        <form action="{% url 'add_department' %}" method="POST">
                             {% csrf_token %}
                             <div class="mb-3">
                                 <label for="department_name">Department Name</label>
